rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-collision-groups__input.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 3
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: Part
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: Anchored
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: BackParamA
      prop_type: Float32
      remaining: fn5+AAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: BackParamB
      prop_type: Float32
      remaining: fn5+AAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: BackSurface
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: BackSurfaceInput
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: BottomParamA
      prop_type: Float32
      remaining: fn5+AAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: BottomParamB
      prop_type: Float32
      remaining: fn5+AAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: BottomSurface
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: BottomSurfaceInput
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: CFrame
      prop_type: CFrame
      remaining: AgICgIKB4jqRj49HgUDBfn5+AAAAAAAAAAAAgIKDnKkBKUeZAcGh
  - Prop:
      type_id: 0
      prop_name: CanCollide
      prop_type: Bool
      values:
        - true
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: CastShadow
      prop_type: Bool
      values:
        - true
        - true
        - true
  - Prop:
      type_id: 0
      prop_name: CollisionGroupId
      prop_type: Int32
      values:
        - 1
        - 0
        - 2
  - Prop:
      type_id: 0
      prop_name: Color3uint8
      prop_type: Color3uint8
      remaining: o6OjoqKipaWl
  - Prop:
      type_id: 0
      prop_name: CustomPhysicalProperties
      prop_type: PhysicalProperties
      remaining: AAAA
  - Prop:
      type_id: 0
      prop_name: FrontParamA
      prop_type: Float32
      remaining: fn5+AAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: FrontParamB
      prop_type: Float32
      remaining: fn5+AAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: FrontSurface
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: FrontSurfaceInput
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: LeftParamA
      prop_type: Float32
      remaining: fn5+AAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: LeftParamB
      prop_type: Float32
      remaining: fn5+AAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: LeftSurface
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: LeftSurfaceInput
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: Locked
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Massless
      prop_type: Bool
      values:
        - false
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Material
      prop_type: Enum
      remaining: AAAAAAAAAQEBAAAA
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - group1
        - group0
        - group2
  - Prop:
      type_id: 0
      prop_name: Reflectance
      prop_type: Float32
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: RightParamA
      prop_type: Float32
      remaining: fn5+AAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: RightParamB
      prop_type: Float32
      remaining: fn5+AAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: RightSurface
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: RightSurfaceInput
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: RootPriority
      prop_type: Int32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: RotVelocity
      prop_type: Vector3
      remaining: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: TopParamA
      prop_type: Float32
      remaining: fn5+AAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: TopParamB
      prop_type: Float32
      remaining: fn5+AAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: TopSurface
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: TopSurfaceInput
      prop_type: Enum
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: Float32
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: Velocity
      prop_type: Vector3
      remaining: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: formFactorRaw
      prop_type: Enum
      remaining: AAAAAAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: shape
      prop_type: Enum
      remaining: AAAAAAAAAAAAAQEB
  - Prop:
      type_id: 0
      prop_name: size
      prop_type: Vector3
      remaining: gYGBAAAAAAAAAAAAf39/AAAAAAAAAAAAgICAAAAAAAAAAAAA
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
  - End
